--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "gen": "node run.js"
+    "gen": "babel-node build.js"
   },
   "repository": {
     "type": "git",
@@ -16,9 +16,9 @@
   },
   "homepage": "https://github.com/julic20s/julic20s.github.io#readme",
   "dependencies": {
+    "@babel/node": "^7.20.7",
+    "@babel/plugin-transform-react-jsx": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/register": "^7.18.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
