--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/plugin-transform-react-jsx": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webpack": "^5.75.0"
   }
 }
