--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@babel/node": "^7.20.7",
     "@babel/plugin-transform-react-jsx": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwindcss": "^3.2.4",
     "webpack": "^5.75.0"
   }
 }
